# betaman

./: .env.example  .gitignore  README.md
client/: .gitignore  package-lock.json  package.json  test-all.sh
client/src/app/: layout.tsx  page.tsx
client/src/app/api/analyze/: route.ts
client/src/components/: VoiceNarration.tsx  WalletButton.tsx
client/src/context/: WalletContext.tsx
client/src/lib/: exif-utils.ts
program/: Anchor.toml
program/betaman_program/: Anchor.toml  Cargo.toml
program/betaman_program/programs/betaman_program/: Cargo.toml
program/betaman_program/programs/betaman_program/src/: lib.rs
program/betaman_program/src/: lib.rs
program/betaman_program/tests/: betaman_program.ts
