[package]
name = "betaman_program"
version = "0.1.0"
description = "BetAman escrow and reputation smart contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "betaman_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"